day3/kubernetes/service-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: website
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8081
  selector:
    app: myapp
  type: ClusterIP
